Fix broken integration test

--- a/test/dummy/app/assets/elements/compile/test5.css.scss
+++ b/test/dummy/app/assets/elements/compile/test5.css.scss
@@ -1,5 +1,5 @@
 $color: red;
 
-em {
+p {
   color: $color;
 }
